# ceres_task03

ceres_project/: CMakeLists.txt  README.md  result.md
ceres_project/output/: original_with_tracking.avi  processed_blurred.avi  validation_video.avi
ceres_project/src/: main.cpp  main2.cpp
